<resources>
    <string name="app_name">2048</string>
    <string name="action_settings">Settings</string>
    <string name="play">Play</string>
    <string name="rank">Rank</string>
    <string name="exit">Exit</string>
    <string name="action_about">About</string>
    <string name="label_score">Score</string>
    <string name="label_best">Best</string>
    <string name="zero">0</string>
    <string name="new_game">New Game</string>
    <string name="game_over">Game Over</string>
    <string name="close">Close</string>
    <string name="score_colon">"Score: "</string>
    <string name="title_input_name">Please input your name.</string>
    <string name="ok">OK</string>
    <string name="name">name</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_rank">Rank</string>
    <string name="pref_title_name">Name</string>
    <string name="version_label">Version</string>
    <string name="github_label">Github</string>
    <string name="contributors_label">Contributors</string>
    <string name="version">v1.0</string>
    <string name="github">
        <a href="https://github.com/c910335/2048">2048</a>
    </string>
    <string name="contributors">
        <a href="https://github.com/c910335">Tatsujin Chin</a>\n
        <a href="https://github.com/harry0514s">harry0514s</a>\n
        <a href="https://github.com/ScarlettCanaan">ScarlettCanaan</a>\n
        <a href="https://github.com/WongKinYiu">Kin-Yiu, Wong</a>
    </string>
    <string name="loading">Loading...</string>
</resources>
