<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@drawable/bg_main"
    tools:context="asia.tatsujin.www2048.MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="@dimen/home_button_size"
        android:contentDescription="@string/play"
        android:src="@drawable/fig_play"
        android:scaleType="fitCenter"
        android:background="@null"
        android:id="@+id/button_play"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="115dp"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="@dimen/home_button_size"
        android:contentDescription="@string/rank"
        android:src="@drawable/fig_rank"
        android:scaleType="fitCenter"
        android:background="@null"
        android:id="@+id/button_rank"
        android:layout_alignParentTop="true"
        android:layout_marginTop="242dp"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="@dimen/home_button_size"
        android:contentDescription="@string/exit"
        android:src="@drawable/fig_exit"
        android:scaleType="fitCenter"
        android:background="@null"
        android:id="@+id/button_exit"
        android:layout_alignParentTop="true"
        android:layout_marginTop="369dp"/>
</RelativeLayout>
